Tracking user location example

--- a/TrackingUser/Info.plist
+++ b/TrackingUser/Info.plist
@@ -28,6 +28,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Some times need this information</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>When need user information request that</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
